# sus-lakehouse

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
airflow/: Dockerfile  README.md  docker-compose.yaml
airflow/dags/: sih_pipeline.py  sih_pipeline_composer.py
dashboard/: Dockerfile  app.py  requirements.txt
dbt/: dbt_project.yml  profiles.yml.example
dbt/models/mart/: mart_avg_length_of_stay.sql  mart_mortality_rate.sql  mart_total_cost.sql  schema.yml
dbt/models/staging/: schema.yml  stg_sih_rd.sql
dbt/seeds/: cid10_chapters.csv
dbt/tests/generic/: positive_values.sql  strictly_positive.sql
ingestion/: Dockerfile  bigquery.py  download.py  requirements.txt  upload_gcs.py
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
